--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
 #Redis
-spring.redis.host=localhost
-spring.redis.password=
-spring.redis.port=6379
+#spring.redis.host=localhost
+#spring.redis.password=
+#spring.redis.port=6379
